# implayer

./: .gitignore  CMakeLists.txt  Makefile.emscripten  README.md
emscripten/: shell_minimal.html
example/websocket-fmp4-server/: main.go
nginx/: player.conf
src/: main.cc
src/core/: frame.h  i_player.h  media_file_info.h  player.cc  player.h  types.h
src/demo/: avio_write_h264.cc
src/ffmpeg/: ffmpeg_audio_resampler.h  ffmpeg_avio_demuxer.cc  ffmpeg_avio_demuxer.h  ffmpeg_base_demuxer.cc  ffmpeg_base_demuxer.h  ffmpeg_codec.h  ffmpeg_common_utils.h  ffmpeg_decode_engine.h  ffmpeg_decoder_context.h  ffmpeg_demuxer.cc  ffmpeg_demuxer.h  ffmpeg_format_utils.h  ffmpeg_frame_queue.h  ffmpeg_headers.h  ffmpeg_image_converter.h  ffmpeg_object_deleter.h  ffmpeg_packet_queue.h  ffmpeg_waitable_frame_queue.h  ffmpeg_waitable_packet_queue.h  i_demuxer.h
src/network/: emscripten_websocket.cc  emscripten_websocket.h
src/output/: base_audio_output.cc  base_audio_output.h  base_video_output.cc  base_video_output.h  i_audio_output.h  i_video_output.h  imgui_sdl2_video_output.cc  imgui_sdl2_video_output.h  sdl2_audio_output.cc  sdl2_audio_output.h  sdl2_video_output.cc  sdl2_video_output.h
src/source/: base_source.cc  base_source.h  emscripten_websocket.h  ffmpeg_decoder copy.cc  ffmpeg_decoder copy.h  i_decoder.h  i_source.h  simple_source.cc  simple_source.h  source_factory.cc  source_factory.h  websocket_fmp4.cc  websocket_fmp4.h  websocket_fmp4_source.cc  websocket_fmp4_source.h
src/utils/: av_synchronizer.h  clock.h  clock_manager.h  scope_guard.h  simple_fifo.h  singleton.h  thread_base.cc  thread_base.h  time_utils.h  waitable_event.h  waitable_queue.h
web/: index.html  index.js
